--- a/style.css
+++ b/style.css
@@ -3,123 +3,311 @@
 	padding: 0;
 	font-family: sans-serif;
 }
-
-.container{
-	position: relative;
-	width: 100%;
-	height: 100vh;
-	background: #fff;
+html{
+	scroll-behavior: smooth;
 }
-
-/*nav{
+nav p{
+	flex: 1;
 	display: flex;
-	width: 100%;
-	margin: auto;
-	padding: 20px 20px;
+	margin-left: 10%;
+	font-size: 30px;
+	letter-spacing: 1px;
+	cursor: pointer;
+	color: white;
+}
+nav p span{
+	color: red;
+}
+nav{
+	display: flex;
+	justify-content: right;
 	align-items: center;
-	justify-content: space-between;
-}*/
-
+	background-color: #000;
+	position: sticky;
+	top: 0;
+}
 nav ul{
+	display: flex;
 	list-style: none;
-	margin: 0;
-	padding: 0;
-	text-align: right;
+	margin: 20px 30px;
 }
-
 nav ul li{
-	display: inline-block;
-	/*margin: 10px 20px;*/
+	font-size: 18px;
+	font-weight: bold;
 }
-
 nav ul li a{
 	text-decoration: none;
-	color: #000;
-	font-weight: bold;
-	display: block;
-	padding: 25px 20px;
-	margin-right: 20px;
+	padding: 8px 25px;
+	color: white;
+	transition: all .5s ease;
 }
-
 nav ul li a:hover{
 	color: red;
-	cursor: pointer;
 }
-
-.About{
-	margin-left: 8%;
-	margin-top: 10%;
+#Home{
+	background-image: url(pujitha.png);
+	width: 100%;
+	height: auto;
 }
-
-.About h1{
-	font-size: 50px;
-	color: #000;
+.innerContainer{
+	padding: 15% 10%;
+}
+.Home h1{
 	margin-bottom: 20px;
+	font-weight: bold;
+	font-size: 50px;
+	color: white;
+	/*margin-left: 10%;*/
 }
-
-span{
-	color: red;
-}
-
-#role{
-	color: limegreen;
+.Home p{
 	font-size: 20px;
+	color: white;
+	letter-spacing: 1px;
 }
-
-.About p{
-	color: #000;
-	line-height: 22px;
+.Home span{
+	color: #ff0000;
 }
-
-.About a{
+.Home a{
 	background: #212121;
 	padding: 10px 18px;
 	text-decoration: none;
 	font-weight: bold;
-	color: #000;
+	color: #fff;
 	display: inline-block;
 	margin: 30px 0;
 	border-radius: 5px;
+	transition: all .5s ease;
 }
- 
-.About a:hover{
+.Home a:hover{
 	color: red;
 }
-
-#cv{
-	color: #fff;
+.About{
+	width: 100%;
+	height: auto;
+	background-color: #000;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
-
-#cv:hover{
+.About img{
+	height: auto;
+	width: 25%;
+	height: 80vh;
+	margin-left: 13%;
+	margin-bottom: 20px;
+	margin-top: 5%;
+}
+.AboutMe{
+	width: 40%;
+	color: white;
+	letter-spacing: 1px;
+	line-height: 30px;
+}
+.AboutMe h1{
+	font-size: 40px;
+	font-weight: bold;
+	margin-bottom: 15px;
+}
+.AboutMe h4{
+	font-size: 25px;
 	color: red;
+	font-weight: bold;
+	margin-bottom: 15px;
+}
+.Skills{
+	width: 100%;
+	height: auto;
+	background-color: #000;
+	display: inline-block;
+	align-items: center;
+}
+.Skills h1{
+	color: white;
+	font-size: 40px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	text-align: center;
+	cursor: pointer;
+	margin-top: 5%;
+}
+.softskills{
+	width: 40%;
+	display: inherit;
+	float: left;
+	align-items: center;
+	justify-content: space-around;
+	padding: 50px 0px 0px 5%;
+}
+.softskills .skill{
+	color: #000;
+	width: 250px;
+	background-color: #85fa00;
+	height: auto;
+	border-radius: 15px;
+	padding: 5px 2px 2px 2px;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 10px;
+	display: flex;
+}
+.courses{
+	width: 50%;
+	float: right;
+	color: white;
+	display: inline-block;
+	align-items: center;
+	padding: 50px 5% 50px 0;
+	justify-content: space-around;
+}
+.course{
+	width: 500px;
+	height: 20px;
+	background-color: #fff;
+	border-radius: 15px;
+	margin-bottom: 20px;
+}
+.courses h2,.softskills h2{
+	color: lightpink;
+	margin-bottom: 30px;
+	font-size: 30px;
+	cursor: pointer;
+}
+.courses h4{
+	width: 200px;
+	font-size: 20px;
+	font-weight: bold;
+	color: red;
+	margin-right: 0px;
+}
+.courseprogress{
+	display: flex;
+	width: 100%;
+}
+.course .skill{
+	background-color: #85fa00;
+	border-radius: 15px;
+	padding: 1px;
+	text-align: right;
+	color: #000;
+	font-size: 16px;
+	font-weight: bold;
+}
+.course .html{
+	width: 80%;
+}
+.course .css{
+	width: 60%;
 }
 
-.images{
-	width: 45%;
-	height: 80%;
-	position: absolute;
-	bottom: 0px;
-	right: 20px;
+.course .js{
+	width: 50%;
 }
-
-/*.images .me{
-	width: 45%;
-	height: 80%;
+.course .python{
+	width: 50%;
 }
-*/
-.images .me{
-	height: 100%;
-	position: absolute;
-	left: 50%;
-	bottom: 0;
-	transform: translate(-50%);
-	transition: bottom 1s , left 1s;
+.course .c{
+	width: 80%;
 }
-/*
-.images shape{
-	bottom: 40px;
-}*/
-
-/*.images:hover .me{
-	left: 45%;
-}*/
+.course .java{
+	width: 50%;
+}
+.course .sql{
+	width: 50%;
+}
+.Projects{
+	display: inline-block;
+	width: 100%;
+	height: auto;
+	background-color: #000;
+	align-items: center;
+	color: white;
+}
+.Projects h1{
+	color: white;
+	font-size: 40px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	text-align: center;
+	cursor: pointer;
+	margin-top: 5%;
+}
+.Projects h2{
+	color: pink;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 20px;
+	margin-left: 10%;
+	cursor: pointer;
+}
+.Projects h4{
+	color: skyblue;
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 10px;
+	margin-left: 10%;
+	cursor: pointer;
+}.Projects p{
+	width: 70%;
+	color: white;
+	font-size: 15px;
+	line-height: 20px;
+	margin-left: 14%;
+	margin-bottom: 20px;
+	cursor: pointer;
+	letter-spacing: 1px;
+}
+ .Projects .Tech{
+	display: flex;
+	color: white;
+	margin-left: 14%;
+	cursor: pointer;
+	letter-spacing: 1px;
+}
+.Projects .Tech1{
+	color: skyblue;
+	font-size: 18px;
+	width: 400px;
+}
+.Projects .Techname{
+	font-size: 15px;
+    width: 200px;   
+}
+.Projects .quizimages{
+	margin-left: 10%;
+}
+.Projects .quizimages img{
+	width: 250px;
+	height: 120px;
+	margin-bottom: 20px;
+	margin-right: 30px;
+	cursor: pointer;
+}
+.contact{
+	width: 100%;
+	height: auto;
+	background-color: #000;
+	display: inline-block;
+	align-items: center;
+}
+.contact h1{
+	color: white;
+	font-size: 40px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	text-align: center;
+	cursor: pointer;
+	margin-top: 5%;
+	margin-bottom: 50px;
+}
+.contact label{
+	margin-left: 40%;
+	width: 100px;
+	font-size: 17px;
+	color: white;
+}
+.contact input{
+	width: 200px;
+}
